--- a/app/src/main/res/layout/item_search_result_sport.xml
+++ b/app/src/main/res/layout/item_search_result_sport.xml
@@ -11,7 +11,7 @@
         android:id="@+id/view1"
         android:layout_width="@dimen/margin_2"
         android:layout_height="@dimen/margin_14"
-        android:background="@color/color_F08E29"
+        android:background="@drawable/bg_search_title_left"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvResultTittle"
         app:layout_constraintBottom_toBottomOf="@+id/tvResultTittle"/>
