--- a/app/src/main/res/layout/button_odd_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail.xml
@@ -34,7 +34,8 @@
                 android:textColor="@color/selector_button_odd_top_text2"
                 android:textSize="@dimen/textSize13sp"
                 tools:text="义大利"
-                tools:textColor="@color/color_8F8F8F_999999" />
+                tools:textColor="@color/color_8F8F8F_999999"
+                android:includeFontPadding="false" />
 
             <TextView
                 android:id="@+id/tv_spread"
@@ -45,7 +46,8 @@
                 android:textColor="@color/selector_button_odd_top_text"
                 android:textSize="@dimen/textSize13sp"
                 tools:text="-0.5/1"
-                tools:textColor="@color/color_F75452_b73a20" />
+                tools:textColor="@color/color_F75452_b73a20"
+                android:includeFontPadding="false"/>
 
         </LinearLayout>
 
@@ -53,11 +55,12 @@
             android:id="@+id/tv_odds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="4dp"
             android:textColor="@color/selector_button_odd_bottom_text"
             android:textSize="@dimen/textSize15sp"
             android:textStyle="bold"
-            tools:text="1.067" />
+            tools:text="1.067"
+            android:includeFontPadding="false" />
 
     </LinearLayout>
 
