--- a/app/src/main/res/layout/activity_maintenance.xml
+++ b/app/src/main/res/layout/activity_maintenance.xml
@@ -71,4 +71,20 @@
         android:paddingEnd="10dp"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <Button
+        android:id="@+id/btn_service"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:background="@drawable/bg_radius_22_button_dusk"
+        android:minWidth="100dp"
+        android:minHeight="36dp"
+        android:text="@string/btn_service"
+        android:textAllCaps="false"
+        android:textColor="@color/color_191919_FCFCFC"
+        android:textSize="@dimen/textSize14sp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_customer_service"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="15dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
