--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -76,6 +76,7 @@
     <color name="color_404040_e5e5e5">@color/color_404040</color>
     <color name="color_404348_EDEDED">@color/color_404348</color>
     <color name="color_404040_e2e2e2">@color/color_404040</color>
+    <color name="color_1f1f1f_fcfcfc">@color/color_1F1F1F</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#1AFFFFFF</color>
