--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -390,7 +390,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
                 android:layout_alignParentBottom="true"
-                android:background="@color/color_F3F4F5"
+                android:background="@color/color_141414_F3F4F5"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingLeft="@dimen/margin_8"
