--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -76,6 +76,8 @@
     <color name="color_EAF4FE">#EAF4FE</color>
     <color name="color_232628">#232628</color>
     <color name="color_202020">#202020</color>
+    <color name="color_dedede">#dedede</color>
+    <color name="color_2a2a2a">#2a2a2a</color>
 
 
     <!--以下部分，是系统中的白天的色值 -->
@@ -144,6 +146,7 @@
     <color name="color_e5e5e5_202020">@color/color_202020</color>
     <color name="color_e5e5e5_000000">@color/color_000000</color>
     <color name="color_FFFFFF_060F20">@color/color_060F20</color>
+    <color name="color_2a2a2a_dedede">@color/color_dedede</color>
 
     <color name="color_FFFFFF_DE000000">@color/color_DE000000</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_black_60</color>
