[新增] 2605 前端註冊時,須在介面上增加條款項目

--- a/app/src/main/res/drawable/bg_bounds_edittext_error.xml
+++ b/app/src/main/res/drawable/bg_bounds_edittext_error.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
-            <solid android:color="#ffffffff"/>
+            <solid android:color="@color/color_1A1A1A_FAFAFA"/>
             <stroke android:color="#E44438"
                 android:width="1dp"/>
         </shape>
