--- a/app/src/main/res/drawable/bg_radius_23_button_dusk.xml
+++ b/app/src/main/res/drawable/bg_radius_23_button_dusk.xml
@@ -3,13 +3,13 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <corners android:radius="23dp" />
-            <solid android:color="#ff0f53af" />
+            <solid android:color="@color/color_3131FF_0F53AF" />
         </shape>
     </item>
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <corners android:radius="23dp" />
-            <solid android:color="#ff0f53af" />
+            <solid android:color="@color/color_2B2B2B_e2e2e2" />
         </shape>
     </item>
 </selector>
