[新增] 賽事詳情頁數據統計顯示邏輯
若該列沒有顯示的圖示則隱藏該列

--- a/app/src/main/res/layout/view_toolbar_live.xml
+++ b/app/src/main/res/layout/view_toolbar_live.xml
@@ -62,6 +62,7 @@
     </net.cachapa.expandablelayout.ExpandableLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_control"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:orientation="horizontal">
