--- a/app/src/main/res/layout/fragment_left_menu.xml
+++ b/app/src/main/res/layout/fragment_left_menu.xml
@@ -111,7 +111,8 @@
             android:layout_marginTop="@dimen/margin_20"
             android:paddingStart="@dimen/margin_12"
             android:paddingEnd="@dimen/margin_20"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -137,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/tvHistoryTittle"
                     android:text="@string/text_search_history"
-                    android:textColor="@color/color_191919_FCFCFC"
+                    android:textColor="@color/color_FCFCFC_191919"
                     android:textSize="@dimen/margin_14"
                     android:textStyle="bold"
                     android:layout_marginStart="@dimen/margin_16"
