--- a/app/src/main/res/layout/dialog_bottom_sheet_settlement_game_type.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_settlement_game_type.xml
@@ -30,6 +30,7 @@
         android:divider="@null"
         android:dividerHeight="0dp"
         android:nestedScrollingEnabled="true"
+        android:overScrollMode="never"
         tools:listitem="@layout/item_listview_settlement_game_type" />
 
 </LinearLayout>
