--- a/app/src/main/res/layout/dialog_bottom_sheet_settlement_league_type.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_settlement_league_type.xml
@@ -15,6 +15,7 @@
         android:layout_height="300dp"
         android:divider="@null"
         android:dividerHeight="0dp"
+        android:overScrollMode="never"
         tools:listitem="@layout/item_listview_settlement_league"
         tools:itemCount="5"/>
 
